<resources>
    <string name="app_name">Cuaderfia</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="Fiados">Fiados</string>
    <string name="Fiado">Fiado</string>
    <string name="Saldar">Abonar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="descripcion">Historial de Deudas</string>
    <string name="monto">Monto Fiado</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="compra">Breve descripcion</string>
    <string name="descCompra">Concepto de la deuda(Opcional)</string>
    <string name="MontoFiado">Total de la deuda:</string>
    <string name="TotalC">Total</string>
    <string name="signo">$</string>
    <string name="salda">Saldar o Abonar</string>
    <string name="aceptar">Aceptar</string>
    <string name="descrip">Descripcion</string>
    <string name="TotalPagado">Total Pagado</string>
    <string name="abonar"><u>------>Total abonado:</u></string>
    <string name="saldar">Saldar</string>
    <string name="actualizar">Actualizar</string>
    <string name="EditarCliente">Editar Datos de Cliente</string>
    <string name="totalFiado">Total Fiado</string>
    <string name="clientes">Clientes</string>
    <string name="ajustes">Ajustes</string>
    <string name="compartir">Compartir App</string>
    <string name="resetear">Resetear</string>
    <string name="Copia">Copia de Seguridad</string>
    <string name="califica">Calificar</string>
    <string name="busca">Busca un cliente</string>
    <string name="w">Enviar por<b> WhatsApp</b></string>
    <string name="clientenuevo">Cliente Nuevo</string>
    <string name="nombrecliente">Nombre</string>
    <string name="direccioncliente">Direccion</string>
    <string name="telefonocliente">Telefono(Celular)</string>
    <string name="deuda">Deuda:</string>
    <string name="nuevaVenta">Nueva Deuda</string>
    <string name="valorDeuda">Valor de la deuda</string>
    <string name="buscarPorName">Buscar por nombre</string>
    <string name="totalPago">Total del pago:</string>
    <string name="concepto">Concepto (Opcional)</string>
    <string name="hisCreditos">Historial de Pagos</string>
    <string name="hist">Historial</string>
    <string name="cliente">Cliente</string>
    <string name="abonado">Abonado:</string>
    <string name="resta">Resta:</string>
    <string name="empty">No hay clientes agregados</string>
    <string name="vacio">Aun sin datos</string>
</resources>