<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagar">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="731dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_shape"
                android:elevation="6dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/adamina"
                    android:gravity="center"
                    android:text="@string/salda"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/TotalC"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/descripcionTotalPagado"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/TotalC"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    android:maxLength ="12"/>

                <TextView
                    android:id="@+id/txtValorFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape3"
                    android:fontFamily="@font/adamina"
                    android:gravity="center"
                    android:text="@string/totalPago"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/adamina"
                    android:gravity="center"
                    android:text="@string/compra"
                    android:textColor="#000000" />

                <AutoCompleteTextView
                    android:id="@+id/descripcionPagar"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/concepto"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollbars="vertical"
                    android:textColor="#000000"
                    android:maxLength ="256"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Acept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="92dp"
                    android:background="@drawable/btnagregar"
                    android:text="@string/add"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>