<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarContacto">
    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_shape"
                android:elevation="6dp"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titlepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/EditarCliente"
                    android:textAlignment="center"
                    android:textColor="#424242"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView

                        android:id="@+id/imageView4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="41dp"
                        android:background="@drawable/contactos" />

                    <EditText
                        android:id="@+id/EDTnombre"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext"
                        android:hint="@string/nombrecliente"
                        android:inputType="textCapSentences"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:maxLength ="50"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView

                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/direccion" />

                    <EditText
                        android:id="@+id/EDTdireccion"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext"
                        android:hint="@string/direccioncliente"
                        android:inputType="textCapSentences"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:maxLength ="100"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView

                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/telefono" />


                    <EditText
                        android:id="@+id/EDTtelefono"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext"
                        android:ems="10"
                        android:hint="@string/telefonocliente"
                        android:inputType="phone"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:maxLength ="16"/>

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ActualizarCliente"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/btnagregar"
                    android:text="@string/actualizar"
                    android:textAllCaps="false"
                    android:textColor="#FFF"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/cancelarEdiatr"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancelarEdiatr"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btnagregar"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#AFAFAF"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ActualizarCliente" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>